# Aezab

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_en.md  README_zh.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: publish-sdks.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py
console/: index.html  package.json
console/src/: App.tsx  AuthGate.tsx  api.ts  main.tsx  styles.css
docs/: configuration.md  configuration_en.md  deployment.md  development.md  integration.md  migrations.md  troubleshooting.md  troubleshooting_en.md
examples/: widget-demo.html
sdk/js/: README.md  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/hlab_client/: __init__.py  client.py
server/: config.py  db.py  db_migrate.py  exceptions.py  main.py  runtime_config.py
server/api/: _usage_check.py  agent_capabilities.py  agent_connections.py  agent_skills.py  agent_templates.py  agents.py  asr.py  audit.py  auth.py  backup.py  files.py  invoke.py  knowledge.py  llm_configs.py  sessions.py  skills.py  subscriptions.py  tools.py  vector_admin.py  workflows.py
server/engine/: agent_runtime.py  asr.py  audit_logger.py  backup.py  circuit_breaker.py  context_budget.py  event_dispatcher.py  knowledge_retriever.py  llm_adapter.py  llm_health.py  localization.py  request_guard.py  retention.py  secrets_store.py  summary_scheduler.py  tool_gateway.py  vector_rebuild.py  vector_store.py  workflow_executor.py
server/middleware/: auth.py
server/models/: __init__.py  subscription.py  user.py
static/: widget.js
(+57 files in other folders)
