[project]
name = "hlab-client"
version = "0.1.0"
description = "Official Python SDK for the HlAB Headless AI Agent Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "HlAB", email = "oss@hlab.example.com" },
]
keywords = ["hlab", "aezab", "ai-agent", "llm", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://github.com/AbysenAI/aezab"
Repository = "https://github.com/AbysenAI/aezab"
Documentation = "https://github.com/AbysenAI/aezab/blob/main/docs/integration.md"
Issues = "https://github.com/AbysenAI/aezab/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hlab_client*"]
